Ajout des cc et des attachements dans l'envoi d'un devis, création dun évt dans l'historique
plbsi-prod.properties suppose que l'adresse devis@plb.fr est valide

--- a/resources/plbsi-dev.properties
+++ b/resources/plbsi-dev.properties
@@ -4,5 +4,6 @@ WEB_URL_IMG=/plbsi-3.0/WebRootImg
 WEB_URL=http://dev.plb.fr
 #WEB_URL=http://localhoost:8080
 SERVEUR=http://localhost:8080/plbsi
-URL_CSS=http://dev.plb.fr/Content/css/Site.css
+#URL_CSS=http://dev.plb.fr/Content/css/Site.css
 URL_CSS=http://localhost:8080/Content/css/Site.css
+DEVIS_CC=devis@plb.fr
