--- a/src/main/labels.properties
+++ b/src/main/labels.properties
@@ -170,7 +170,9 @@ historique.IntervenantModificationEvent = Fiche intervenant modifiée
 historique.NotificationIntervenantsEvent = Notification des intervenants
 historique.NotificationIntervenantsEvent.includeURL = URL de mise à jour de la grille de compétence incluse
 historique.NotificationIntervenantsEvent.notIncludeURL = URL de mise à jour de la grille de compétence non incluse
-historique.ProspectCreationEvent=Modification d'un prospect
+historique.ProspectCreationEvent=Création d'un prospect
+historique.ProspectModificationEvent=Modification d'un prospect
+historique.ProspectEnvoiMailEvent=Envoi mail au prospect
 historique.TarifUpdatedEvent= Modifications de tarifs
 historique.message=Message
 infos.updated = Vos informations ont été mises à jour
