--- a/src/main/plbsi.properties
+++ b/src/main/plbsi.properties
@@ -4,3 +4,4 @@ URL_CSS=http://dev.plb.fr/Content/css/Site.css
 WEB_URL=http://dev.plb.fr
 WEB_URL_IMG=/plbsi-3.0/WebRootImg
 SERVEUR=http://localhost:8080/plbsi
+DEVIS_CC=devis@plb.fr
