--- a/resources/plbsi-int.properties
+++ b/resources/plbsi-int.properties
@@ -4,3 +4,4 @@ WEB_URL=http\://dev.plb.fr
 WEB_URL_IMG=http\://dev.plb.fr/Content/upload/
 SERVEUR=http\://dev.plb.fr\:8081/plbsi
 URL_CSS=http\://dev.plb.fr/Content/css/Site.css
+DEVIS_CC=dthibau@wmmod.com
