--- a/resources/plbsi-prod.properties
+++ b/resources/plbsi-prod.properties
@@ -4,3 +4,4 @@ WEB_URL=http://www.plb.fr
 WEB_URL_IMG=http://www.plb.fr/Content/upload
 SERVEUR=http://prod.plb.fr:8080/plbsi
 URL_CSS=http://www.plb.fr/Content/css/Site.css
+DEVIS_CC=devis@plb.fr
