Ack de lenvoi de devis

--- a/resources/plbsi-dev.properties
+++ b/resources/plbsi-dev.properties
@@ -6,4 +6,4 @@ WEB_URL=http://dev.plb.fr
 SERVEUR=http://localhost:8080/plbsi
 #URL_CSS=http://dev.plb.fr/Content/css/Site.css
 URL_CSS=http://localhost:8080/Content/css/Site.css
-DEVIS_CC=devis@plb.fr
+DEVIS_CC=dthibau@wmmod.com
