Contrôles formulaire denvoi du devis

--- a/src/main/labels.properties
+++ b/src/main/labels.properties
@@ -1,5 +1,6 @@
 ack.remove = L'enregistrement a été supprimé
 ack.save = Modifications enregistrées
+ack.send = Le message a bien été envoyé
 action.cancel=Annuler
 action.close=Fermer
 action.dupliquer=Dupliquer
@@ -13,6 +14,7 @@ action.terminer=Terminer
 application.email=no-reply@plb.fr
 application.title=PLBSI
 
+error.email.emptyBody=Le corps du message est vide
 error.reference.unique=Le code référence existe déjà
 error.invalidEmail=L'email a un format incorrect
 error.invalidURL=L'URL est invalide
@@ -76,7 +78,9 @@ devis.envoi.attention=A l'attention de
 devis.envoi.body=Corps du message
 devis.envoi.subject.titre=Sujet
 devis.envoi.subject=[Dossier PLB n°{0}] - Envoi de Devis 
+devis.envoi.bcc=Copie cachée à
 devis.envoi.cc=Copie à
+devis.envoi.cc.help=Séparer par des ,
 devis.envoi.template=Message type
 emailTemplate.subject=Titre
 emailTemplate.body=Corps du message
