--- a/resources/plbsi-dev.properties
+++ b/resources/plbsi-dev.properties
@@ -1,5 +1,5 @@
 MAIL_ENABLED=true
-WEB_ROOT_IMG=/home/dthibau/Dev/servers/jboss-as-7.1.1.Final/standalone/deployments/plbsi-3.0.war/WebRootImg
+WEB_ROOT_IMG=/home/dthibau/Dev/servers/jboss-eap-6.4/standalone/deployments/plbsi-3.0.war/WebRootImg
 WEB_URL_IMG=/plbsi-3.0/WebRootImg
 WEB_URL=http://dev.plb.fr
 #WEB_URL=http://localhoost:8080
