--- a/build-dev.properties
+++ b/build-dev.properties
@@ -1,4 +1,4 @@
-jboss.home=/home/dthibau/Dev/servers/jboss-as-7.1.1.Final
+jboss.home=/home/dthibau/Dev/servers/jboss-eap-6.4
 jasper_home=/home/dthibau/Dev/outils/jasperreports-5.5.0
 glassfish.home=C:/Program Files/glassfish-v2.1
 glassfish.domain=domain1
