--- a/build-prod.properties
+++ b/build-prod.properties
@@ -1,5 +1,5 @@
 
-jboss.home=/home/dthibau/Dev/servers/jboss-as-7.1.1.Final
+#jboss.home=/home/dthibau/Dev/servers/jboss-as-7.1.1.Final
 jasper_home=/home/jboss/jasperreports-5.5.0
 glassfish.home=C:/Program Files/glassfish-v2.1
 glassfish.domain=domain1
