Ticket #31, Utilisation de code pour les statuts plutôt que les libellés

--- a/src/main/labels.properties
+++ b/src/main/labels.properties
@@ -359,10 +359,12 @@ tarifs.updated=Les tarifs ont été mis à jour
 warn.contenu=Attention le cours de notre partenaire n\u2019est pas identique \u00E0 celui sur notre site Web
 warn.mutualisee=Vous ne pouvez pas éditer les dates car c'est une formation mutualisée. Merci de faire la demande de modification à Julie
 
-ST_PROSPECT_RECHERCHE=Recherche
-ST_PROSPECT_AUDIT = Audit planifié
-ST_PROSPECT_COMMERCIAL = Commercial
-ST_PROSPECT_RECHERCHE_MODIFIE = Recherche modifiée
-ST_PROSPECT_LOGISTIQUE = Logistique
-ST_PROSPECT_ANNULE = Annulé
-ST_PROSPECT_OK = OK
+statut.intra.recherche=Recherche
+statut.intra.audit = Audit planifié
+statut.intra.commercial = Commercial
+statut.intra.recherche_modifiee = Recherche modifiée
+statut.intra.logistique = Logistique
+statut.intra.annule = Annulé
+statut.intra.ok = OK
+
+
