Tableau de répartition SQL

--- a/src/main/labels.properties
+++ b/src/main/labels.properties
@@ -278,6 +278,11 @@ prospect.nonRenseigne=Non renseigné
 prospect.heure=Heure
 prospect.nomContact=Nom
 prospect.natureClient=Nature du Client
+prospect.potentiel=Potentiel
+prospect.potentiel.0=N/C
+prospect.potentiel.1=Faible
+prospect.potentiel.2=Moyen
+prospect.potentiel.3=Bon
 prospect.sexe=Civilité
 prospect.prenom=Prénom
 prospect.fonction=Fonction
