Suppression du champ àsuivre, remplaer par Potentiel=bon.

--- a/src/main/labels.properties
+++ b/src/main/labels.properties
@@ -279,6 +279,7 @@ prospect.heure=Heure
 prospect.nomContact=Nom
 prospect.natureClient=Nature du Client
 prospect.potentiel=Potentiel
+prospect.potentiel.-1=Tout potentiel
 prospect.potentiel.0=N/C
 prospect.potentiel.1=Faible
 prospect.potentiel.2=Moyen
