Gestion des relances

--- a/src/main/labels.properties
+++ b/src/main/labels.properties
@@ -326,6 +326,7 @@ prospect.nomOpca=Nom OPCA
 prospect.cgv=Condition génarale de vente
 prospect.all=Afficher aussi les prospects Gagné / Perdu / Abandon
 prospect.encours=Afficher tous les en cours
+prospect.relance=Afficher les relances
 prospect.catalogue=Je souhaite recevoir le catalogue PLB Consultant par courrier
 prospect.news=Je souhaite être informé par mail des nouvelles formations
 prospect.cial=Je souhaite être contacté par votre service commercial
