On pointe vers le site online

--- a/resources/plbsi-int.properties
+++ b/resources/plbsi-int.properties
@@ -1,7 +1,7 @@
 MAIL_ENABLED=true
 WEB_ROOT_IMG=/var/www/dev2/public_html/Content/upload/
-WEB_URL=http\://dev.plb.fr
-WEB_URL_IMG=http\://dev.plb.fr/Content/upload/
+WEB_URL=http\://plb.avaedos.com
+WEB_URL_IMG=http\://plb.avaedos.com/Content/upload/
 SERVEUR=http\://dev.plb.fr\:8081/plbsi
 URL_CSS=http\://dev.plb.fr/Content/css/Site.css
 DEVIS_CC=dthibau@wmmod.com
