Transfer des images des filières vers le site web via FTP

--- a/resources/plbsi-dev.properties
+++ b/resources/plbsi-dev.properties
@@ -1,5 +1,8 @@
 MAIL_ENABLED=true
-WEB_ROOT_IMG=/home/dthibau/Dev/servers/jboss-eap-6.4/standalone/deployments/plbsi-3.0.war/WebRootImg
+FTP_URL=plb.avaedos.com
+FTP_LOGIN=plbftp
+FTP_PASSWORD=rt68i4ilR6sdg482z6e68by42uno4mz68t4ze
+WEB_ROOT_IMG=./Dev/Test
 WEB_URL_IMG=/plbsi-3.0/WebRootImg
 WEB_URL=http://dev.plb.fr
 #WEB_URL=http://localhoost:8080
