--- a/resources/plbsi-int.properties
+++ b/resources/plbsi-int.properties
@@ -1,5 +1,9 @@
 MAIL_ENABLED=true
-WEB_ROOT_IMG=/var/www/dev2/public_html/Content/upload/
+FTP_URL=plb.avaedos.com
+FTP_LOGIN=plbftp
+FTP_PASSWD=rt68i4ilR6sdg482z6e68by42uno4mz68t4ze
+WEB_ROOT_IMG=./Integration/Test
+#WEB_ROOT_IMG=/var/www/dev2/public_html/Content/upload/
 WEB_URL=http\://plb.avaedos.com
 WEB_URL_IMG=http\://plb.avaedos.com/Content/upload/
 SERVEUR=http\://dev.plb.fr\:8081/plbsi
