--- a/resources/plbsi-prod.properties
+++ b/resources/plbsi-prod.properties
@@ -1,4 +1,7 @@
 MAIL_ENABLED=true
+FTP_URL=plb.avaedos.com
+FTP_LOGIN=plbftp
+FTP_PASSWORD=rt68i4ilR6sdg482z6e68by42uno4mz68t4ze
 WEB_ROOT_IMG=/var/www/plb_site_v3/public_html/Content/upload/
 WEB_URL=http://www.plb.fr
 WEB_URL_IMG=http://www.plb.fr/Content/upload
