Changing dev to plbsi-rec in URLs

--- a/resources/plbsi-int.properties
+++ b/resources/plbsi-int.properties
@@ -6,6 +6,6 @@ WEB_ROOT_IMG=./Integration/Test
 #WEB_ROOT_IMG=/var/www/dev2/public_html/Content/upload/
 WEB_URL=http\://plb.avaedos.com
 WEB_URL_IMG=http\://plb.avaedos.com/Content/upload/
-SERVEUR=http\://dev.plb.fr\:8081/plbsi
-URL_CSS=http\://dev.plb.fr/Content/css/Site.css
+SERVEUR=http\://plbsi-rec.plb.fr\:8081/plbsi
+URL_CSS=http\://plbsi-rec.plb.fr/Content/css/Site.css
 DEVIS_CC=dthibau@wmmod.com
