--- a/src/main/plbsi.properties
+++ b/src/main/plbsi.properties
@@ -3,8 +3,8 @@ FTP_URL=plb.avaedos.com
 FTP_LOGIN=plbftp
 FTP_PASSWORD=rt68i4ilR6sdg482z6e68by42uno4mz68t4ze
 WEB_ROOT_IMG=./WebRootImg
-URL_CSS=http://dev.plb.fr/Content/css/Site.css
-WEB_URL=http://dev.plb.fr
+URL_CSS=http://plbsi-rec.plb.fr/Content/css/Site.css
+WEB_URL=http://plbsi-rec.plb.fr
 WEB_URL_IMG=/plbsi-3.0/WebRootImg
 SERVEUR=http://localhost:8080/plbsi
 DEVIS_CC=dthibau@wmmod.com
