URLs prod and dev continued

--- a/resources/plbsi-dev.properties
+++ b/resources/plbsi-dev.properties
@@ -4,7 +4,7 @@ FTP_LOGIN=plbftp
 FTP_PASSWORD=rt68i4ilR6sdg482z6e68by42uno4mz68t4ze
 WEB_ROOT_IMG=./Dev/Test
 WEB_URL_IMG=/plbsi-3.0/WebRootImg
-WEB_URL=http://plbsi-rec.plb.fr
+WEB_URL=http://plb-rec.plb.fr
 #WEB_URL=http://localhoost:8080
 SERVEUR=http://localhost:8080/plbsi
 #URL_CSS=http://plbsi-rec.plb.fr/Content/css/Site.css
