--- a/resources/plbsi-prod.properties
+++ b/resources/plbsi-prod.properties
@@ -1,10 +1,10 @@
 MAIL_ENABLED=true
-FTP_URL=plb.avaedos.com
+FTP_URL=plb-prod.plb.fr
 FTP_LOGIN=plbftp
 FTP_PASSWORD=rt68i4ilR6sdg482z6e68by42uno4mz68t4ze
 WEB_ROOT_IMG=/var/www/plb_site_v3/public_html/Content/upload/
 WEB_URL=http://www.plb.fr
-WEB_URL_IMG=http://www.plb.fr/Content/upload
-SERVEUR=http://prod.plb.fr:8080/plbsi
-URL_CSS=http://www.plb.fr/Content/css/Site.css
+WEB_URL_IMG=http://plb-prod.plb.fr/Content/upload
+SERVEUR=http://plbsi-prod.plb.fr:8081/plbsi
+URL_CSS=http://plb-prod.plb.fr/Content/css/Site.css
 DEVIS_CC=devis@plb.fr
