Externalize offset for DEvis Relance

--- a/resources/plbsi-dev.properties
+++ b/resources/plbsi-dev.properties
@@ -10,3 +10,4 @@ SERVEUR=http://localhost:8080/plbsi
 #URL_CSS=http://plbsi-rec.plb.fr/Content/css/Site.css
 URL_CSS=http://localhost:8080/Content/css/Site.css
 DEVIS_CC=dthibau@wmmod.com
+DEVIS_RELANCE=6
