--- a/resources/plbsi-int.properties
+++ b/resources/plbsi-int.properties
@@ -9,3 +9,4 @@ WEB_URL_IMG=http\://plb-rec.plb.fr/Content/upload/
 SERVEUR=http\://plbsi-rec.plb.fr\:8081/plbsi
 URL_CSS=http\://plb-rec.plb.fr/Content/css/Site.css
 DEVIS_CC=dthibau@wmmod.com
+DEVIS_RELANCE=6
