--- a/resources/plbsi-prod.properties
+++ b/resources/plbsi-prod.properties
@@ -8,3 +8,4 @@ WEB_URL_IMG=https://www.plb.fr/Content/upload
 SERVEUR=http://plbsi-prod.plb.fr:8081/plbsi
 URL_CSS=https://www.plb.fr/Content/css/Site.css
 DEVIS_CC=devis@plb.fr
+DEVIS_RELANCE=6
