Adding cpf Code

--- a/src/main/labels.properties
+++ b/src/main/labels.properties
@@ -106,6 +106,7 @@ formation.distance=Formation à distance
 formation.duree=Durée
 formation.elearning=E-learning
 formation.eligibleCpf=Eligible CPF
+formation.codeCpf=Code CPF
 formation.filiere=Filière
 formation.filiere.rang=Rang
 formation.filieres=Filières
