Splitting Objectif en 2 champs : Descriptif et Objectif

--- a/src/main/labels.properties
+++ b/src/main/labels.properties
@@ -121,6 +121,7 @@ formation.mutualisees=Formations mutualisées
 formation.niveau=Niveau
 formation.nouveaute=Nouveauté
 formation.officiel=Cours officiel
+formation.descriptif=Descriptif
 formation.objectifs=Objectifs
 formation.origine=Origine
 formation.formationPartenaires=Formations Partenaire
