Fixing Dev environnement

--- a/src/main/plbsi.properties
+++ b/src/main/plbsi.properties
@@ -8,3 +8,4 @@ WEB_URL=http://plbsi-rec.plb.fr
 WEB_URL_IMG=/plbsi-3.0/WebRootImg
 SERVEUR=http://localhost:8080/plbsi
 DEVIS_CC=dthibau@wmmod.com
+DEVIS_RELANCE=6
