Validation message for Max raisonPerte

--- a/resources/plbsi-dev.properties
+++ b/resources/plbsi-dev.properties
@@ -1,4 +1,4 @@
-MAIL_ENABLED=true
+MAIL_ENABLED=false
 FTP_URL=plb.avaedos.com
 FTP_LOGIN=plbftp
 FTP_PASSWORD=rt68i4ilR6sdg482z6e68by42uno4mz68t4ze
