Lien vers le site web dans les mails de notification

--- a/src/main/labels.properties
+++ b/src/main/labels.properties
@@ -230,7 +230,8 @@ keyword=Mot-clés
 mail.bonjour=Bonjour {0},
 mail.cc=Envoyé également à {0}
 mail.connect.label = Accèder à l'application
-mail.directLink.label=Accèder à la formation
+mail.directLink.label=Accèder à la formation dans plbsi
+mail.directLink.label.site=Accèder au site
 mail.destinataires=Message envoyé à {0} 
 mail.destinataires.size=Message envoyé à {0} destinataires 
 mail.grilleLink=Accèder à votre grille de compétence
