--- a/src/main/plbsi.properties
+++ b/src/main/plbsi.properties
@@ -1,11 +1,13 @@
-MAIL_ENABLED=false
+MAIL_ENABLED=true
 FTP_URL=plb.avaedos.com
 FTP_LOGIN=plbftp
 FTP_PASSWORD=rt68i4ilR6sdg482z6e68by42uno4mz68t4ze
-WEB_ROOT_IMG=./WebRootImg
-URL_CSS=http://plbsi-rec.plb.fr/Content/css/Site.css
-WEB_URL=http://plbsi-rec.plb.fr
+WEB_ROOT_IMG=./Dev/Test
 WEB_URL_IMG=/plbsi-3.0/WebRootImg
+WEB_URL=http://plb-rec.plb.fr
+#WEB_URL=http://localhoost:8080
 SERVEUR=http://localhost:8080/plbsi
+#URL_CSS=http://plbsi-rec.plb.fr/Content/css/Site.css
+URL_CSS=http://localhost:8080/Content/css/Site.css
 DEVIS_CC=dthibau@wmmod.com
 DEVIS_RELANCE=6
