--- a/src/main/labels.properties
+++ b/src/main/labels.properties
@@ -109,7 +109,7 @@ formation.eligibleCpf=Eligible CPF
 formation.codeCpf=Code CPF
 formation.filiere=Filière
 formation.filiere.rang=Rang
-formation.filieres=Filières
+formation.filieres=Catégorie (filière) secondaires
 formation.formationAssociees=Formations associées
 formation.informations=Informations
 formation.intra=Intra
