--- a/resources/plbsi-dev.properties
+++ b/resources/plbsi-dev.properties
@@ -11,3 +11,6 @@ SERVEUR=http://localhost:8080/plbsi
 URL_CSS=http://localhost:8080/Content/css/Site.css
 DEVIS_CC=dthibau@wmmod.com
 DEVIS_RELANCE=6
+KIBANA_LINK_START=http://kibana:5601/app/kibana#/discover?_g%3D(refreshInterval:(display:Off,pause:!f,value:0),time:(from:now-1y,mode:quick,to:now))=&_a=(columns:!(codeproduit),index:'317977f0-7aba-11e8-ab2a-59886e3afa0a',interval:auto
+KIBANA_LINK_QUERY=,query:(language:lucene,query:'$query$')
+KIBANA_LINK_END=,sort:!(datedebutsession,desc))&_g=(refreshInterval:(display:Off,pause:!f,value:0),time:(from:now-1y,mode:quick,to:now))
