RC Categories Secondaires

--- a/src/main/labels.properties
+++ b/src/main/labels.properties
@@ -96,6 +96,7 @@ formation.bo=Accès BO
 formation.campagneAdWords=Campagne AdWords
 formation.categorie=Catégorie
 formation.categories=Catégories
+formation.categoriesSecondaires=Catégories secondaires
 formation.certification=Certification
 formation.contenu=Contenu
 formation.coursPlbCataloguePartenaire=Cours PLB Catalogue Partenaire
@@ -108,7 +109,6 @@ formation.elearning=E-learning
 formation.eligibleCpf=Eligible CPF
 formation.codeCpf=Code CPF
 formation.filiere=Filière
-formation.filiere.rang=Rang
 formation.filieres=Filières 
 formation.formationAssociees=Formations associées
 formation.informations=Informations
