Ajout des 3 nouveaux champs

--- a/src/main/labels.properties
+++ b/src/main/labels.properties
@@ -117,6 +117,8 @@ formation.lastUpdateDate = Dernière date de mise à jour
 formation.libelle=Libellé
 formation.libelleInformations=Libellé du champ informations
 formation.motClePrimaire=Mot-clé primaire
+formation.modalites_suivi=Modalités de suivi et d'évaluation
+formation.moyens_pedagogiques=Moyens pédagogiques et techniques
 formation.mutualisees=Formations mutualisées
 formation.niveau=Niveau
 formation.nouveaute=Nouveauté
@@ -135,6 +137,8 @@ formation.prix=Prix
 formation.rangCategorie=Rang
 formation.rangFilierePrincipale=Rang filière principale
 formation.reference=Référence
+formation.remise=Remise
+formation.remise.sans=Sans remise
 formation.rtf=RTF
 formation.remarques=Remarques
 formation.sessions=Sessions PLB
