Gestion des libellés dans l historique

--- a/src/main/labels.properties
+++ b/src/main/labels.properties
@@ -170,11 +170,13 @@ message.emetteur=Emetteur
 historique.date=Date
 historique.event=Evènement
 historique.global = Catalogue
+historique.FormationArchiveEvent= Archivage de la formation
 historique.FormationCommentEvent= Message
 historique.FormationCreationEvent= Création de formation
 historique.FormationModificationEvent= Mise à jour
 historique.FormationSessionEvent = Mise à jour des sessions
 historique.FormationSuppressionEvent = Suppression de formation
+historique.FormationUnArchiveEvent= Dés-Archivage de la formation
 historique.IntraCreationEvent = Création demande d'Intra
 historique.IntraModificationEvent = Modification du statut
 historique.IntervenantModificationEvent = Fiche intervenant modifiée
