Switch to new site

--- a/resources/plbsi-int.properties
+++ b/resources/plbsi-int.properties
@@ -1,12 +1,12 @@
 MAIL_ENABLED=true
-FTP_URL=plb-rec.plb.fr
+FTP_URL=newsite.plb.fr
 FTP_LOGIN=plbftp
 FTP_PASSWORD=rt68i4ilR6sdg482z6e68by42uno4mz68t4ze
 WEB_ROOT_IMG=./Integration/Test
 #WEB_ROOT_IMG=/var/www/dev2/public_html/Content/upload/
-WEB_URL=http\://plb-rec.plb.fr
-WEB_URL_IMG=http\://plb-rec.plb.fr/Content/upload/
+WEB_URL=http\://newsite.plb.fr
+WEB_URL_IMG=http\://newsite.plb.fr/Content/upload/
 SERVEUR=http\://plbsi-rec.plb.fr\:8081/plbsi
-URL_CSS=http\://plb-rec.plb.fr/Content/css/Site.css
+URL_CSS=http\://newsite.plb.fr/Content/css/Site.css
 DEVIS_CC=dthibau@wmmod.com
 DEVIS_RELANCE=6
