--- a/resources/plbsi-dev.properties
+++ b/resources/plbsi-dev.properties
@@ -7,7 +7,7 @@ WEB_URL_IMG=/plbsi-3.0/WebRootImg
 WEB_URL=http://plb-rec.plb.fr
 #WEB_URL=http://localhoost:8080
 SERVEUR=http://localhost:8080/plbsi
-#URL_CSS=http://plbsi-rec.plb.fr/Content/css/Site.css
-URL_CSS=http://localhost:8080/Content/css/Site.css
+URL_CSS=http://newsite.plb.fr/app/css/main.css
+#URL_CSS=http://localhost:8080/Content/css/Site.css
 DEVIS_CC=dthibau@wmmod.com
 DEVIS_RELANCE=6
