--- a/resources/plbsi-int.properties
+++ b/resources/plbsi-int.properties
@@ -7,6 +7,6 @@ WEB_ROOT_IMG=./Integration/Test
 WEB_URL=http\://newsite.plb.fr
 WEB_URL_IMG=http\://newsite.plb.fr/Content/upload/
 SERVEUR=http\://plbsi-rec.plb.fr\:8081/plbsi
-URL_CSS=http\://newsite.plb.fr/Content/css/Site.css
+URL_CSS=http://newsite.plb.fr/app/css/main.css
 DEVIS_CC=dthibau@wmmod.com
 DEVIS_RELANCE=6
