--- a/src/main/plbsi.properties
+++ b/src/main/plbsi.properties
@@ -8,6 +8,6 @@ WEB_URL=http://plb-rec.plb.fr
 #WEB_URL=http://localhoost:8080
 SERVEUR=http://localhost:8080/plbsi
 #URL_CSS=http://plbsi-rec.plb.fr/Content/css/Site.css
-URL_CSS=http://localhost:8080/Content/css/Site.css
+URL_CSS=http://newsite.plb.fr/app/css/main.css
 DEVIS_CC=dthibau@wmmod.com
 DEVIS_RELANCE=6
