--- a/src/main/labels.properties
+++ b/src/main/labels.properties
@@ -40,6 +40,7 @@ competences.updated = Vos compétences sont mises à jour en temps réel il n'est p
 competences.removed = Compétence supprimée !
 
 filiere.color = Couleur
+filiere.color_titre = Couleur titre
 filiere.description = Description
 filiere.imageMoyen = Moyenne image
 filiere.imagePetit = Petite image
