Champ libelle top10

--- a/src/main/labels.properties
+++ b/src/main/labels.properties
@@ -156,6 +156,7 @@ formation.tarifInter.sans=Sans code tarif
 formation.tarifIntra=Tarif Intra.
 formation.tarifIntraCode=Code Intra.
 formation.top10=Top 40
+formation.top-libelle=Libellé pour top10
 formation.travauxPratiques=Travaux pratiques
 formation.type=Type partenaire (couleur)
 formation.updateTarif=Tarif à jour ?
