Contenu par défaut modalités

--- a/src/main/labels.properties
+++ b/src/main/labels.properties
@@ -118,6 +118,7 @@ formation.libelle=Libellé
 formation.libelleInformations=Libellé du champ informations
 formation.motClePrimaire=Mot-clé primaire
 formation.modalites_suivi=Modalités de suivi et d'évaluation
+formation.modalites_suivi.default=Les participants signent une feuille de présence par demi-journée. Une attestation de fin de stage est remise à la fin de la formation.<br/><b>L''évaluation en cours de formation</b> est réalisée grâce à des exercices ou études de cas (50% du temps minimum pour les cours pratiques) et/ou sous forme de QCM.<br/><b>L''évaluation en fin de formation</b> est réalisée de la même façon ou par un questionnaire d\u2019auto-évaluation qui permet de mesurer l''évolution par rapport au début de la formation et/ou par le passage de l''examen de certification, le cas échéant.
 formation.moyens_pedagogiques=Moyens pédagogiques et techniques
 formation.mutualisees=Formations mutualisées
 formation.niveau=Niveau
