Tableau des notifications

--- a/src/main/labels.properties
+++ b/src/main/labels.properties
@@ -193,6 +193,7 @@ historique.ProspectModificationEvent=Modification d'un prospect
 historique.ProspectEnvoiMailEvent=Envoi mail au prospect
 historique.TarifUpdatedEvent= Modifications de tarifs
 historique.message=Message
+historique.subject=Sujet
 infos.updated = Vos informations ont été mises à jour
 intervenants=Intervenants
 intervenant.adresse=Adresse
@@ -254,6 +255,7 @@ menu.search=Rechercher
 menu.search.formation=Rechercher par formations
 menu.search.intervenant=Rechercher par intervenants
 menu.grille=Grilles de compétences
+menu.notification=Notifications
 mutualisation.merge = Les groupes de formations ont été fusionnés : {0}
 mutualisation.add = La formation {0} a été ajoutée au groupe de formation
 mutualisation.addToGroup = La formation a été ajoutée à un groupe existant : {0}
