Config SSL pour environnement de recette

--- a/resources/plbsi-int.properties
+++ b/resources/plbsi-int.properties
@@ -6,7 +6,7 @@ WEB_ROOT_IMG=./Integration/Test
 #WEB_ROOT_IMG=/var/www/dev2/public_html/Content/upload/
 WEB_URL=http\://plb-rec.plb.fr
 WEB_URL_IMG=http\://plb-rec.plb.fr/Content/upload/
-SERVEUR=http\://plbsi-rec.plb.fr\:8081/plbsi
-URL_CSS=http\://plb-rec.plb.fr/Content/css/Site.css
+SERVEUR=https\://plbsi-rec.plb.fr\:8444/plbsi
+URL_CSS=https\://plb-rec.plb.fr/Content/css/Site.css
 DEVIS_CC=dthibau@wmmod.com
 DEVIS_RELANCE=6
