Changements URLS avec nouveau site

--- a/resources/plbsi-dev.properties
+++ b/resources/plbsi-dev.properties
@@ -5,9 +5,10 @@ FTP_PASSWORD=rt68i4ilR6sdg482z6e68by42uno4mz68t4ze
 WEB_ROOT_IMG=./Dev/Test
 WEB_URL_IMG=/plbsi-3.0/WebRootImg
 WEB_URL=http://plb-rec.plb.fr
+PDF_URL= https://plbpdf-rec.plb.fr
 #WEB_URL=http://localhoost:8080
 SERVEUR=http://localhost:8080/plbsi
-URL_CSS=http://newsite.plb.fr/app/css/main.css
+URL_CSS=https://plb-rec.plb.fr/app/css/main.css
 #URL_CSS=http://localhost:8080/Content/css/Site.css
 DEVIS_CC=dthibau@wmmod.com
 DEVIS_RELANCE=6
