--- a/resources/plbsi-int.properties
+++ b/resources/plbsi-int.properties
@@ -6,7 +6,8 @@ WEB_ROOT_IMG=./Integration/Test
 #WEB_ROOT_IMG=/var/www/dev2/public_html/Content/upload/
 WEB_URL=http\://newsite.plb.fr
 WEB_URL_IMG=http\://newsite.plb.fr/Content/upload/
+PDF_URL= https://plbpdf-rec.plb.fr
 SERVEUR=https\://plbsi-rec.plb.fr\:8444/plbsi
-URL_CSS=http://newsite.plb.fr/app/css/main.css
+URL_CSS=https://plb-rec.plb.fr/app/css/main.css
 DEVIS_CC=dthibau@wmmod.com
 DEVIS_RELANCE=6
