--- a/resources/plbsi-prod.properties
+++ b/resources/plbsi-prod.properties
@@ -5,6 +5,7 @@ FTP_PASSWORD=rt68i4ilR6sdg482z6e68by42uno4mz68t4ze
 WEB_ROOT_IMG=/var/www/plb_site_v3/public_html/Content/upload/
 WEB_URL=https://www.plb.fr
 WEB_URL_IMG=https://www.plb.fr/Content/upload
+PDF_URL= https://plbpdf-prod.plb.fr
 SERVEUR=https://plbsi-prod.plb.fr:8443/plbsi
 URL_CSS=https://www.plb.fr/Content/css/Site.css
 DEVIS_CC=devis@plb.fr
