Changements URLS avec nouveau site

--- a/resources/plbsi-int.properties
+++ b/resources/plbsi-int.properties
@@ -4,7 +4,7 @@ FTP_LOGIN=plbftp
 FTP_PASSWORD=rt68i4ilR6sdg482z6e68by42uno4mz68t4ze
 WEB_ROOT_IMG=./Integration/Test
 #WEB_ROOT_IMG=/var/www/dev2/public_html/Content/upload/
-WEB_URL=http\://newsite.plb.fr
+WEB_URL=https://plb-rec.plb.fr
 WEB_URL_IMG=http\://newsite.plb.fr/Content/upload/
 PDF_URL= https://plbpdf-rec.plb.fr
 SERVEUR=https\://plbsi-rec.plb.fr\:8444/plbsi
