--- a/resources/plbsi-prod.properties
+++ b/resources/plbsi-prod.properties
@@ -7,6 +7,6 @@ WEB_URL=https://www.plb.fr
 WEB_URL_IMG=https://www.plb.fr/Content/upload
 PDF_URL= https://plbpdf-prod.plb.fr
 SERVEUR=https://plbsi-prod.plb.fr:8443/plbsi
-URL_CSS=https://www.plb.fr/Content/css/Site.css
+URL_CSS=https://www.plb.fr/app/css/main.css
 DEVIS_CC=devis@plb.fr
 DEVIS_RELANCE=6
