Utilisation du cache pour liste de sélection des formations associées et mutulalisées

--- a/src/main/plbsi.properties
+++ b/src/main/plbsi.properties
@@ -11,3 +11,4 @@ SERVEUR=http://localhost:8080/plbsi
 URL_CSS=http://newsite.plb.fr/app/css/main.css
 DEVIS_CC=dthibau@wmmod.com
 DEVIS_RELANCE=6
+PDF_URL= https://plbpdf-rec.plb.fr
