--- a/src/main/labels.properties
+++ b/src/main/labels.properties
@@ -127,7 +127,7 @@ formation.niveau=Niveau
 formation.nouveaute=Nouveauté
 formation.officiel=Cours officiel
 formation.descriptif=Descriptif
-formation.objectifs_operationels=Objectifs opérationels
+formation.objectifs_operationnels=Objectifs opérationnels
 formation.objectifs_pedagogiques=Objectifs pédagogiques
 formation.objectif.simple=Objectif
 formation.objectif.simple.Fondamental= Acquérir les bases
