--- a/src/main/labels.properties
+++ b/src/main/labels.properties
@@ -302,6 +302,7 @@ prospect.potentiel.0=N/C
 prospect.potentiel.1=Faible
 prospect.potentiel.2=Moyen
 prospect.potentiel.3=Bon
+prospect.potentiel.4=Très bon
 prospect.sexe=Civilité
 prospect.prenom=Prénom
 prospect.fonction=Fonction
