--- a/src/main/labels.properties
+++ b/src/main/labels.properties
@@ -284,6 +284,7 @@ prospect.asuivre.filter=Limiter aux prospects à suivre
 prospect.eventModifMessage=Création d'un prospect : Fiche Contact ( Téléphone )
 prospect.nonAffecte=Non affecté
 prospect.gagne=Gagné
+prospect.doublon=Doublon
 prospect.save=Prospect de {0} sauvegardé avec succès.
 prospect.date=Date
 prospect.dateSession=Date(s) session(s)
@@ -343,7 +344,7 @@ prospect.dateCreation=Date de création
 prospect.opca=OPCA
 prospect.nomOpca=Nom OPCA
 prospect.cgv=Condition génarale de vente
-prospect.all=Afficher aussi les prospects Gagné / Perdu / Abandon
+prospect.all=Afficher aussi les prospects Gagné / Perdu / Abandon / Doublon
 prospect.encours=Afficher tous les en cours
 prospect.relance=Afficher les relances
 prospect.catalogue=Je souhaite recevoir le catalogue PLB Consultant par courrier
