Prise en compte de l événement FormationModificationSessionEvent apporté par la v2

--- a/src/main/labels.properties
+++ b/src/main/labels.properties
@@ -181,6 +181,7 @@ historique.FormationArchiveEvent= Archivage de la formation
 historique.FormationCommentEvent= Message
 historique.FormationCreationEvent= Création de formation
 historique.FormationModificationEvent= Mise à jour
+historique.FormationModificationSessionEvent= Mise à jour des sessions
 historique.FormationSessionEvent = Mise à jour des sessions
 historique.FormationSuppressionEvent = Suppression de formation
 historique.FormationUnArchiveEvent= Dés-Archivage de la formation
