Ajout champ modalite

--- a/src/main/labels.properties
+++ b/src/main/labels.properties
@@ -320,6 +320,7 @@ prospect.participant=Nb de participant(s)
 prospect.dureeSouhait=Durée souhaitée
 prospect.dureeMax=Durée Max
 prospect.dateSouhait=Dates souhaitées
+prospect.modalites=Modalités
 prospect.concurence=Concurence
 prospect.reference=Réference
 prospect.com=Commercial
