--- a/src/main/labels.properties
+++ b/src/main/labels.properties
@@ -177,6 +177,13 @@ message.emetteur=Emetteur
 historique.date=Date
 historique.event=Evènement
 historique.global = Catalogue
+historique.DevisCreationEvent = Création de devis
+historique.FormationModificationAjoutFormationPartenaire = Ajout Formation Partenaire
+historique.FormationModificationSuppressionFormationPartenaire = Suppression Formation Partenaire
+historique.FormationModificationRemarqueEvent = Modification remarques
+historique.FormationModificationStatutEvent = Modification statut
+historique.FormationModificationSuppressionFormationAsscociee = Suppression formation associée
+historique.FormationModificationAjoutFormationAsscociee = Ajout formation associée
 historique.FormationArchiveEvent= Archivage de la formation
 historique.FormationCommentEvent= Message
 historique.FormationCreationEvent= Création de formation
