--- a/resources/plbsi-dev.properties
+++ b/resources/plbsi-dev.properties
@@ -12,3 +12,4 @@ URL_CSS=https://plb-rec.plb.fr/app/css/main.css
 #URL_CSS=http://localhost:8080/Content/css/Site.css
 DEVIS_CC=dthibau@wmmod.com
 DEVIS_RELANCE=6
+PLBSI_V2=https\://plbsi-rec.plb.fr\:9443/
