--- a/resources/plbsi-int.properties
+++ b/resources/plbsi-int.properties
@@ -11,3 +11,4 @@ SERVEUR=https\://plbsi-rec.plb.fr\:8444/plbsi
 URL_CSS=https://plb-rec.plb.fr/app/css/main.css
 DEVIS_CC=dthibau@wmmod.com
 DEVIS_RELANCE=6
+PLBSI_V2=https\://plbsi-rec.plb.fr\:9443/
