--- a/resources/plbsi-prod.properties
+++ b/resources/plbsi-prod.properties
@@ -10,3 +10,4 @@ SERVEUR=https://plbsi-prod.plb.fr:8443/plbsi
 URL_CSS=https://www.plb.fr/app/css/main.css
 DEVIS_CC=devis@plb.fr
 DEVIS_RELANCE=6
+PLBSI_V2=https\://plbsi-prod.plb.fr\:9443/
