--- a/src/main/plbsi.properties
+++ b/src/main/plbsi.properties
@@ -12,3 +12,5 @@ URL_CSS=http://newsite.plb.fr/app/css/main.css
 DEVIS_CC=dthibau@wmmod.com
 DEVIS_RELANCE=6
 PDF_URL= https://plbpdf-rec.plb.fr
+PLBSI_V2=https\://plbsi-rec.plb.fr\:9443/
+
