Modif Export Excel

--- a/src/main/labels.properties
+++ b/src/main/labels.properties
@@ -295,6 +295,7 @@ prospect.gagne=Gagné
 prospect.doublon=Doublon
 prospect.save=Prospect de {0} sauvegardé avec succès.
 prospect.date=Date
+prospect.heure=Heure
 prospect.dateSession=Date(s) session(s)
 prospect.dateDevis=Date devis
 prospect.nomEntreprise=Nom de la société
