--- a/.classpath
+++ b/.classpath
@@ -9,7 +9,7 @@
 			<attribute name="owner.project.facets" value="jst.jsf;#system#;jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/home/dthibau/Dev/servers/jboss-as-7.1.1.Final/modules/org/hibernate/main/hibernate-core-4.0.1.Final.jar" sourcepath="/home/dthibau/.m2/repository/org/hibernate/hibernate-core/4.0.1.Final/hibernate-core-4.0.1.Final-sources.jar"/>
+	<classpathentry kind="lib" path="/home/dthibau/Dev/servers/jboss-eap-6.4/modules/system/layers/base/org/hibernate/main/hibernate-core-4.2.18.Final-redhat-2.jar" sourcepath="/home/dthibau/.m2/repository/org/hibernate/hibernate-core/4.0.1.Final/hibernate-core-4.0.1.Final-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
